Revert "Autoformat (Maven-driven re: Luke's config)"
This reverts commit 5b47844a78445eb08383a39d3f6e96974855860b.